# DSMSystem

./: .gitignore  CMakeLists.txt  README.md  a.out  dsm_rpc.cpp  dsm_rpc.hpp  pseek.cc
.cache/clangd/index/: config.hpp.02A1B6C5A6C37621.idx  config.hpp.051827FFC6062287.idx  debug.hpp.46D9E76E65FBD630.idx  debug.hpp.FEFFC8A2D2BE863D.idx  dsm_ipc.hpp.A77C6455F5A4D8B5.idx  dsm_node.cpp.C86EEC1D26912166.idx  dsm_node.cpp.E83633054570B32B.idx  dsm_node.hpp.5412C75477915880.idx  dsm_node.hpp.B0FEB48B523F91CE.idx  fault.cpp.C81CA1A07294278E.idx  fault.hpp.D1D7C14F93B29F41.idx  main.cpp.67DA37D778395477.idx  main.cpp.E2B60F062E1F6079.idx  simple_mutex.cpp.297377C2BF9C8B6A.idx  simple_mutex.cpp.8285252AD5C0D1DA.idx  simple_mutex.hpp.34888334482E0B60.idx  simple_mutex.hpp.6B469E063C43E609.idx  singleton.hpp.66D8178DE4B0D8A7.idx  singleton.hpp.BFC7C583951458A3.idx  sync_interface.hpp.132E470C58ED1926.idx  sync_interface.hpp.2DB06B63AB9BA9D0.idx  syncheader.hpp.567D5D379E7E779A.idx  syncheader.hpp.C2EE9BB8C83AE2F3.idx  test1.cpp.A324135434C8B120.idx  (+2 more)
examples/: test1.cpp
playground/: a.out  main.cpp
simulation/: simulate.sh
simulation/node1/: a.out  dsmapp  run.sh
simulation/node2/: a.out  dsmapp  memory mapped file  run.sh
src/: debug.hpp  dsm_node.cpp  dsm_node.hpp  main.cpp  simple_mutex.hpp  sync_interface.hpp  syncheader.hpp
src/include/: debug.hpp  dsm_ipc.hpp  dsm_node.hpp  fault.hpp  simple_mutex.hpp  syncheader.hpp  test_and_set.hpp
src/lib/: CMakeLists.txt  dsm_ipc.cpp  dsm_node.cpp  fault.cpp  main.cpp  simple_mutex.cpp
test/: test1.cpp
